--- a/index.html
+++ b/index.html
@@ -180,7 +180,36 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-<p>тест</p>
+<style>
+	canvas {
+		outline: 1px solid red;
+	}
+</style>
+<script>
+  var fireballSize = 22; //размер фаербола в пикселях
+  var wizardSpeed = 3; //скорость мага
+  var wizardWidth = 70; //ширина мага
+  var ratioWizardHeight = 1.337; //пропорциональное соотношение высоты к ширине мага 
+
+  var getFireballSpeed = function(left) {
+    return left ? 5 : 2;
+  };
+
+  var getWizardHeight = function() {
+    return ratioWizardHeight * wizardWidth;
+  };
+
+  var wizardHeight = getWizardHeight();
+
+  var getWizardX = function(width) {
+  	return width / 2 - wizardWidth / 2;
+  };
+
+  var getWizardY = function(height) {
+  	return height / 3 - wizardHeight / 2;
+  };
+  
+</script>
 <script src="js/game.js"></script>
 
 </body>
