--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   var fireballSize = 22; //размер фаербола в пикселях
   var wizardSpeed = 3; //скорость мага
   var wizardWidth = 70; //ширина мага
-  var ratioWizardHeight = 1.337; //пропорциональное соотношение высоты к ширине мага 
+  var ratioWizardHeight = 1.337; //пропорциональное соотношение высоты к ширине мага
 
   var getFireballSpeed = function(left) {
     return left ? 5 : 2;
@@ -203,8 +203,9 @@
   var getWizardY = function(height) {
   	return height / 3 - wizardHeight / 2;
   };
-  
+
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
